[package]
name = "mouse-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = { version = "0.12.0", features = ["serde"] }
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
#smol = "1.2.5"
#x11rb = { version = "0.10.1", features = ["all-extensions"] }
